[package]
name = "ActiveWebTaskService"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
uuid = { version = "1.5.0", features = ["v4"] }
serde = { version = "^1", features = ["derive"] }
aws-config = "0.57.2"
aws-sdk-dynamodb = "0.36.0"
env_logger = "0.10.1"
log = "^0.4"
strum_macros = "0.25.3"
strum = { version = "0.25.0", features = ["derive"] }
derive_more = "^0.99"
